added ga single page for now

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
     />
     <meta name="theme-color" content="#696969" />
     <title>dadtini's</title>
+    <!-- just gonna go ahead and paste this here for now -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163959709-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-163959709-1');
+    </script>
   </head>
   <body>
     <noscript>dadtinis needs JavaScript to run.</noscript>
