--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#696969" />
-    <title>dadtini's</title>
-    <!-- just gonna go ahead and paste this here for now -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163959709-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-163959709-1');
-    </script>
+    <title>dadtinis</title>
   </head>
   <body>
     <noscript>dadtinis needs JavaScript to run.</noscript>
